added footer material with social ul

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
      <main>
          <p>It consists of a red disc on top (similar to that on Japan's flag) of a green field. The red disc is offset slightly toward the hoist so that it appears centred when the flag is flying. The disc represents the sun rising over Bengal, and also the blood of those who died for the independence of Bangladesh.</p>
      </main>
+    <footer>
+
+        <ul>
+
+            <li>github</li>
+            <li>Facebook</li>
+            <li>Linkdin</li>
+        </ul>
     
+    </footer>
 </body>
 </html>
